--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -1,5 +1,5 @@
 %Kansa collocation
-\newcommand{\kansaglobalrbf}[0]{\cite{Kansa1990a, Kansa1990b, Fasshauer2006, Fornberg2004, Mouat2002, Hon2001, Franke1982, FlyerWright09, FlyerWright07, Hon1999, Fornberg2008, Larsson2003}}
+\newcommand{\kansaglobalrbf}[0]{\cite{Kansa1990a, Kansa1990b, Fasshauer2006, Fornberg2004, Mouat2002, Hon2001, Franke1982, FlyerWright09, FlyerWright07, Hon1999, Fornberg2008, Larsson2003, WrightFlyerYuen10, FlyerFornberg11, Schmidt2009b}}
 \newcommand{\kansacsrbf}[0]{\cite{Fornberg2008, Wang2002}}
 \newcommand{\kansalocalrbf}[0]{\cite{Divo2007, Kosec2008, Sarler2006, Vertnik2006}}
 
