--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan F. Bollig at 2013-04-22 23:39:27 -0500 
+%% Created for Evan F. Bollig at 2013-04-23 05:14:25 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{FasshauerZhang2007,
+	Author = {Fasshauer, Gregory E. and Zhang, Jack G.},
+	Date-Added = {2013-04-23 10:13:56 +0000},
+	Date-Modified = {2013-04-23 10:14:20 +0000},
+	Doi = {10.1007/s11075-007-9072-8},
+	Issn = {1017-1398},
+	Journal = {Numerical Algorithms},
+	Keywords = {Radial basis functions; Approximate moving least squares; Shape parameter; Cross validation; Pseudo-spectral methods; 65D05; 65D15; 65M70},
+	Language = {English},
+	Number = {1-4},
+	Pages = {345-368},
+	Publisher = {Springer US},
+	Title = {On choosing ``optimal'' shape parameters for RBF approximation},
+	Url = {http://dx.doi.org/10.1007/s11075-007-9072-8},
+	Volume = {45},
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s11075-007-9072-8}}
 
 @misc{Zhang2004,
 	Author = {Zhang, Hao and Genton, Marc G.},
