--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -12,7 +12,6 @@
 \begin{document}
 \fi
 
-% TODO: this chapter can be broken up into inputs from subdirectory
 { \graphicspath{{rbffd_methods_content/}} 
 
 %introduction
@@ -39,7 +38,7 @@
 
 The process of solving partial differential equations (PDEs) using radial basis functions (RBFs) dates back to 1990 \cite{Kansa1990a,Kansa1990b}. However, at the core of all RBF methods lies the fundamental problem of approximation/interpolation. Some methods (e.g., global- and compact-RBF methods) apply RBFs to approximate derivatives directly. Others (e.g., RBF-generated Finite Differences) leverage the basis functions to generate weights for finite-differencing stencils, utilizing the weights in turn to approximate derivatives. Regardless, to track the history of RBF methods, one must look back to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. 
 
-As ``meshless" methods, RBF methods excel at solving problems that require geometric flexibility with scattered node layouts in $n$-dimensional space. They naturally extend into higher dimensions without significant increase in programming complexity \cite{FlyerWright07,WrightFlyerYuen10}. In addition to competitive accuracy and convergence compared with other state-of-the-art methods \cite{FlyerWright07, FlyerWright09, FlyerLehto10, WrightFlyerYuen10, FlyerFornberg11}, they also boast stability for large time steps.
+As ``meshless" methods, RBF methods excel at solving problems that require geometric flexibility with scattered node layouts in $D$-dimensional space. They naturally extend into higher dimensions without significant increase in programming complexity \cite{FlyerWright07,WrightFlyerYuen10}. In addition to competitive accuracy and convergence compared with other state-of-the-art methods \cite{FlyerWright07, FlyerWright09, FlyerLehto10, WrightFlyerYuen10, FlyerFornberg11}, they also boast stability for large time steps.
 
 This chapter is dedicated to summarizing the four-decade history of RBF methods leading up to the development of the 
 RBF-generated Finite Differences (RBF-FD) method. Beginning with a brief introduction to RBFs and a historical survey, we attempt to classify related work into three three types: global, compact, and local methods. Following this, the general approximation problem is introduced, with a look at the core of all three method classificiations: RBF scattered-data interpolation. %We categorize existing methods for solving PDEs with RBFs as either global 
@@ -47,19 +46,17 @@ RBF-generated Finite Differences (RBF-FD) method. Beginning with a brief introdu
 %the differential equations at RBF centers. Local methods limit the influence of basis functions and seek an interpolant 
 %at each RBF center defined in terms of neighboring basis functions (local collocation) or nodal values (RBF-FD).
 
-%TODO: follow timeline of methods. how did they evolve into RBF-FD? 
 Three collocation methods are presented: Kansa's method, Fasshauer's method and Direct collocation. Within the historical context of RBF methods we highlight extensions that lead to local interpolation matrices instead of a single global interpolation matrix. Finally, we discuss the most recent methods for solving PDEs, emphasizing RBF-FD as the focus of this work. 
 
 \section{Survey of Related Work}
 
 In Radial Basis Function methods, radially symmetric functions provide a non-orthogonal basis used to interpolate between 
-nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^n$, so 
+nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^D$, so 
 they easily extend into higher dimensions without significant change in programming complexity. Examples of commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; 2D representations of the same functions can be found in Figure~\ref{fig:rbf_examples}. 
-%TODO: preferred RBFs 
 %When solving PDEs, infinitely smooth RBFs (e.g., MQ, IMQ, and GA) are usually preferred over non-smooth and compactly supported RBFs (e.g., TPS and W2), which suffer from slow convergence rates \cite{Chen2002}. 
 Figure~\ref{fig:rbf_dimension_example} illustrates the radial symmetry of RBFs---in this case, a Gaussian RBF---in the first three dimensions (i.e., $\R^{1,2,3}$). 
 
-RBF methods are based on a superposition of translates of these radially symmetric functions, providing a linearly independent but non-orthogonal basis used to interpolate between nodes in $n$-dimensional space. The interpolation problem---referred to as \emph{RBF scattered data interpolation}---seeks the unknown coefficients, $\vw = \{w_j\}$, that satisfy: 
+RBF methods are based on a superposition of translates of these radially symmetric functions, providing a linearly independent but non-orthogonal basis used to interpolate between nodes in $D$-dimensional space. The interpolation problem---referred to as \emph{RBF scattered data interpolation}---seeks the unknown coefficients, $\vw = \{w_j\}$, that satisfy: 
  
 \begin{eqnarray*}
     \sum_{j=1}^{N} \phi_j(r(\vx)) w_{j}   = f(\vx),
@@ -86,13 +83,7 @@ Fortunately, recent algorithms such as Contour-Pad\'{e} \cite{Fornberg2004} and 
 
 \input{rbffd_methods_content/rbf_interp_example}
 
-%TODO: References for compact and non-smooth RBFs \cite{BuhmannBook,WendlandBook}
-
-
-
-
 %TODO: expand with new literature since 2009
-%TODO: any new classifications? 
 %TODO: any new methods?
 
 
@@ -143,7 +134,6 @@ Kansa's unsymmetric collocation method \cite{Kansa1990a, Kansa1990b}, Fasshauer'
 Prior to launching into derivation each RBF method, we first survey the classifications to highlight benefits, shortcomings, and to provide a brief historical context. A survey of related work in the RBF community that involves parallelization and optimization is deferred to Chapter~\ref{chap:parallel_rbf}. 
 
 \subsection{Global RBF Methods}
-%TODO: improve collocation definition 
 
 \emph{Kansa's method} \cite{Kansa1990a, Kansa1990b} (a.k.a. unsymmetric collocation) was the first RBF method for PDEs, and is still the most frequently used method. The idea behind Kansa's method is that an 
 approximate solution to the PDE can be found by finding an interpolant which satisfies the differential operator with zero residual at a set of \emph{collocation points} (these coincide with the RBF centers). To find the interpolant, the differential equation is formulated as a two block (unsymmetric) linear system with: 1) the approximation of values 
@@ -169,7 +159,6 @@ The last collocation method, \emph{Direct Collocation}, was introduced by Fedose
 the differential operator applied to the boundary. Aside from the survey on RBF collocation presented by Larsson and Fornberg \cite{Larsson2003}, no related 
 work was found that applied, or investigated, this method further. 
 
-%TODO: add RBF-PS clarification in next section
 In \cite{Fasshauer2006}, Fasshauer demonstrated that RBF collocation methods can be modified to fit well in the framework of pseudo-spectral methods and coined the name RBF-PS (pseudo-spectral). At first glance, RBF-PS and Kansa's method appear to be interchangeable, and have frequently been confused in literature. While Kansa's method explicitly computes the coefficients for a continuous derivative approximation, the RBF-PS method never explicitly computes the interpolant coefficients. Instead, a differentiation matrix (DM) is used to approximate derivates at the collocation points only \cite{FasshauerZhang2007}. 
 
 As discussed in \cite{FlyerWright09}, global RBF methods result in differentiation matrices that are full. The methods then scale on the order of $O(N^3)$ floating point operations (FLOPs) in preprocessing to assemble and compute an LU-decomposition for a given node layout, and subsequently $O(N^2)$ operations at each time-step to perform forward- and back-solves. While not in mainstream use by the RBF community, \cite{Morse2005} correctly points out that the use of iterative solvers could reduce complexity of preprocessing to the order of $O(N^2)$ in preprocessing. For mid- to large-scale problems, in the unlikely event that conditioning of the system is not a limiting factor, the cost of the method is still seen as prohibitively high. 
@@ -267,8 +256,7 @@ including Navier-Stokes equations \cite{Shu2003} have all been considered.
 
 
 % TODO: add partition of unity discussion
-% TODO: add hermite discussion
-% TODO: add whatever Fasshauer's latest method is. 
+
 
 \section{Comparison of RBF Methods}
 Following \cite{Mouat2002}, consider a PDE expressed in terms of a (linear) differential operator, $\diffop$: 
@@ -283,7 +271,7 @@ where $\Interior$ is the interior of the physical domain, $\Boundary$ is the bou
 \end{equation}
 where $\phi_j(x) = \vectornorm{x - x_j}$ ($\vectornorm{\cdot}$ is standard Euclidean distance). The 
 second sum represents a linear combination of polynomials that enforces zero approximation error
- when $u(x)$ is a polynomial of degree than or equal to $p$. The variable $D$ is the 
+ when $u(x)$ is a polynomial of degree less than or equal to $p$. The variable $D$ is the 
  problem dimension (i.e., $u_{\phi}(x) \in \R^{D}$). 
 %\toevan{Finish to end of paragraph} 
 To eliminate degrees of freedom for well-posedness, $p$ should be greater than or equal to the order of the chosen RBF
@@ -291,7 +279,7 @@ To eliminate degrees of freedom for well-posedness, $p$ should be greater than o
 Note that Equation~\ref{eqn:pde_approx} is evaluated 
  at $x = \{x_i\}_{i=1}^{n}$ known 
 data points through which the interpolant is required to pass with zero residual.  We refer to 
-the $x_i$'s (data points) points as \emph{collocation points}, usually taken as the RBF centers, although this is not a requirement.
+the $x_i$'s (data points) points as \emph{collocation points}, usually taken as the RBF centers; although this is not a requirement.
 %$P_l(x)$ is needed to eliminate degrees of freedom for well-posedness \cite{Iske:2004}. 
 
 To clarify the role of the polynomial part in Equation~\ref{eqn:pde_approx}, it is necessary to
@@ -306,9 +294,9 @@ we seek an interpolant, $\mathcal{P}_f$ of the form
 \end{eqnarray*}
 where $\mathcal{P}_f$ is expressed as a scalar product between the unknown coeffient weights $c_j$ and the radial basis functions $\phi_j(x)$.
 
-
+%TODO: add RBF-PS clarification 
 % TODO: verify that choose has correct vars
-In many cases it is desirable to exactly reproduce functions of degree less than or equal to some order $m$. For RBF scattered data interpolation in one dimension, this can be achieved by adding a polynomial of order $m$ with $M =$${m+1}\choose{1}$ terms (e.g., $x^0, x^1, \cdots, x^{m}$). In 2D, the terms would be: $1, x, y, xy, x^2y, xy^2, \cdots, x^{m}y^{m-1}, x^{m-1}y^{m}, x^my^m$. In $\R^D$, $M =$${m+D}\choose{D}$ \cite{Iske:2004}, giving
+In many cases it is desirable to exactly reproduce functions of degree less than or equal to some order $m$. For RBF scattered data interpolation in one dimension, this can be achieved by adding a polynomial of order $m$ with $M =$${m+1}\choose{1}$ terms (e.g., $x^0, x^1, \cdots, x^{m}$). In 2D, the terms would be: $1, x, y, xy, x^2y, xy^2, \cdots, x^{m}y^{m-1}, x^{m-1}y^{m}, x^my^m$. In $\R^D$, $M =$${m+D}\choose{D}$ \cite{Iske2004}, giving
 \begin{eqnarray}
 f(x) & = & \sum_{j=1}^{N} c_{j}  \phi_j(x)  +  \sum_{l=1}^{M} d_{l} P_l(x),  \hskip1.5em  P_l(x) \in \Pi^{D}_{m} \\
 f & = & \phi^T c + P^T d
@@ -402,7 +390,7 @@ Here we substitute $A_\diffop{}$ for the right hand side row vector. Also, Equat
 \end{eqnarray}
 where the vector-matrix inner product $(A_\diffop{} A^{-1})$ is a row-vector.  Since the coefficient vectors ${c}$ and ${d}$ are the same for all $x_i$, we can group the evaluation of $\diffop{u(x_i)}$ for $i=1,...,n$ as a matrix-vector multiplication where the matrix rows correspond to $(A_\diffop{} A^{-1})$ for each $x_i$. 
 
-\section{Global RBF Method}
+\subsection{Global RBF Method}
 %todo: integrate above...this content is repeated, but better formatted
 Consider a PDE expressed in terms of (linear) differential operators, $\diffop$ and $\boundop{}$: 
 \begin{eqnarray}
@@ -510,7 +498,7 @@ where $\vec{c}$ is substituted by the solution to Equation~\ref{eq:additional_co
 
 %In comparison, calculating the coefficient vectors $c$ and $d$ requires evaluating the basis functions and polynomial part at a set of known collocation points. 
 
-\section{Kansa's Method}
+\subsubsection{Kansa's Method}
 
 The first method of collocation, \emph{Kansa's method} \cite{Kansa1990a, Kansa1990b}, collocates the solution through known values on the boundary, while constraining the interpolant to satisfy the PDE operator on the interior. This is equivalent to choosing $u_\phi$ according to Equation~\ref{eqn:pde_approx}. The resulting system is given by \cite{Mouat2002}; assuming that $\diffop{}$ is a linear operator, 
 \begin{eqnarray}
@@ -543,7 +531,7 @@ where $\phi_\diffop{} = \diffop{\phi}$, $P_\diffop{} = \diffop{P}$ are the inter
 %\toevan{Isn't $N+M=n$? For each case, you must put the proper relationships between $N$, $M$, $n_I$, $n$ so that the number of constraints equals the number of relations.}
 Recall from Chapter~\ref{chap:related} that the matrix in Equation~\ref{eqn:kansa_method} has no guarantee of non-singularity \cite{Fasshauer1997}; however, singularities are rare in practice \cite{Larsson2003}.
 
-\section{Fasshauer's Method}
+\subsubsection{Fasshauer's Method}
 
 \emph{Fasshauer's method} \cite{Fasshauer1997} addresses the problem of singularity in Kansa's method by assuming the interpolation to be Hermite. That is, it requires higher differentiability of the basis functions (they must be at least $C^k$-continuous if $\diffop{}$ is of order $k$). Leveraging this assumption, Fasshauer's method chooses: 
 \begin{eqnarray}
@@ -582,7 +570,7 @@ The symmetry of Fasshauer's (\emph{symmetric collocation}) method is apparent in
  
 %\toevan{Its important to understand that Fasshauer's method reveals a general structure of collocation methods. Specifically, using the general notation in Equation~\ref{eqn:fasshauer_method}, we could separate the operators intended for RBF centers from those intended for the collocation points, which would allow reproduction of the cases: kansa, fasshauer, direct. Where kansa chooses $\diffop_{centers} = 1$,  $\diffop_{colloc} = \diffop$, and $\boundop_{both} = 1$. Fasshauer chooses  $\diffop_{centers} = \diffop{}$, $\diffop_{colloc} = \diffop$ and  $\boundop_{both}=1$. Direct chooses  $\diffop_{centers} = 1$ $\diffop_{colloc} = \diffop$, $\boundop_{centers}=1$, $\boundop_{colloc} = \diffop{}$. Thus Direct is a hybrid of Kansa and Fasshauer. Also, there are additional cases visible here which have not been considered in literature.} 
  
-\section{Direct Collocation}
+\subsubsection{Direct Collocation}
 
 In \emph{Direct collocation} (see \cite{Larsson2003, Fedoseyev2002}, the interpolant is chosen as Equation~\ref{eqn:pde_approx} (the same as Kansa's method). However, the Direct method collocates both the interior and boundary operators at the boundary points:
 %\toevan{Add boundary term and specify that Kansa's method is a special case that sets boundary to 0 (i.e. Dirichlet)}  
@@ -613,8 +601,11 @@ Reformulating as a linear system we get:
 While the final system in Equation~\ref{eqn:direct_method} is structured the same as Kansa's method (Equation~\ref{eqn:kansa_method}), %and is often confused with it (see e.g. \cite{Fasshauer2007}), 
 careful inspection of the index $i$ in Equations~\ref{eqn:kansa_interior} and \ref{eqn:direct_interior} reveals that Direct collocation produces a larger system. %Similar to Fasshauer's method, the larger system is due to additional information about influence of centers on collocation points (e.g.,  boundary on interior, interior on boundary, interior on interior, etc.). Unlike Fasshauer's method, the Direct collocation approach does not change the basis functions in the interpolant making it less obvious to readers when when a linear system represents Kansa's method or the Direct method. 
 
+%TODO: RBF-PS
+\subsubsection{RBF-PS}
 
-\section{Local Methods}
+
+\subsection{Local Methods}
 In all three cases above, the collocation required interpolation with globally supported RBFs. However, the latest trend is to use RBFs defined with some cut-off radius to enforce compact support. In some cases, authors have used the compact support to produce a single (large) sparse system for interpolation (see e.g., \cite{Wang2002, Liu2005, Correa2007, Yang2008, Lin2009}). Other approaches use compact support to produce local linear systems defined at each collocation point. Examples of this include \cite{Sarler2006, Vertnik2006} for Kansa's method, \cite{Stevens2008a, Stevens2009a, Stevens2009b} for Fasshauer's method. To our knowledge no one has considered local Direct collocation.  Also, instead of specifying a cut-off radius, some authors specify the exact stencil size (i.e., number of neighboring points to include); see e.g., \cite{Divo2007, Stevens2009b}. 
 
 After observing the general structure of the symmetric and unsymmetric collocation methods above, it is necessary only to present the symmetric (i.e. Fasshauer's) local method and note that in the unsymmetric case certain blocks will be zero allowing the system to shrink. 
@@ -649,140 +640,15 @@ Solving this system gives an interpolant locally defined around the stencil cent
 Note that because the interpolants are local, there is no notion of global continuity/smoothness of the solution.
 
 
-\section{RBF-FD}
+\subsection{RBF-FD}
 
+% TODO: how does the RBF-FD method expand on existing?
 While most of the literature surrounding RBFs for PDEs involves collocation, an alternative method does exist: RBF-FD. RBF-FD is a hybrid of RBF scattered data interpolation and Finite Difference stencils.The idea behind finite-difference stencils is to express various derivative operators as a linear combination of the unknown functional values in the neighborhood of the point where an approximation to the derivative operator is desired. Common approximations such as upwind differencing, center differencing, higher order approximations, and even spectral operators, are of this form. A common approach to building such discrete operators is to form a local interpolant in a neighborhood of the target point, and simply differentiate it analytically. This is the approach taken in RBF-FD,   which  allows for stencils with irregular placement and number of nodes, and assigns their weights based on an RBF \cite{Wright2003}. For a detailed derivation of the method see \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. Such an approach leads to very simple implementations of time-advancement schemes, whether explicit or implicit. The solution at the new time step is simply some linear (if $\diffop()$ is linear), nonlinear otherwise, combination of the unknown functional values (if implicit scheme) or known functional value (if explicit scheme). 
 
 Key challenges lie in the choice of grid, the choice of stencil, whether or not to change the support as a function of the stencil, how to guaranty the stability of the differentiation  operator after discretizaiton, etc. 
 
 
-%\toevan{what you say below is partially true, but there are many things to say: stability of operator, etc. You don't talk about these things. Add to my explanation above if you wish, but I think we say enough). Some of these (we cannot be specific) will be investigated during the thesis work.}
-
-% 
-%The RBF-FD formulation is straight forward. First, RBFs scattered data interpolation is used to construct an interpolant passing through known function values at each RBF center point (this is Equation~\ref{eqn:pde_approx}). Second, the PDE solution is found by approximating the differential operators with a generalized FD stencil based on known function values.
-
-%%RBF-FD first finds the coefficient weights, $c^{(k)}_j$, that satisfy the interpolation problem in a local neighborhood around the $k$th RBF center (this assumes $u_\phi(x_i) = u(x_i)$ for $i=1,..,n$): %\toevan{Add boundary term}  
-
-%%\begin{eqnarray}
-%%u^{(k)}_\phi(x) = \sum_{j(k)=1}^{N_S} c^{(k)}_j \phi_j(x) + \sum_{l(k)=1}^{M} d^{(k)}_l P_l(x) &\approx& u(x) \\
-%% \left[ \begin{array}{c c} 
-%%	\phi & P \\
-%%	P^T & 0
-%%	\end{array} \right] \left( \begin{array}{c}
-%%							{c} \\
-%%							{d}
-%%							 \end{array}
-%%						 \right) &\approx& \left( \begin{array}{c}
-%%							{u} \\
-%%							0
-%%							 \end{array}
-%%						 \right)
-%%\label{eqn:rbffd_start}
-%%\end{eqnarray}
-%%if we substitute $A$ for the interpolation matrix and $\textbf{c}$  for the coefficients, the solution is:
-%%\begin{eqnarray}
-%%\textbf{c} &=& A^{-1} \textbf{u}.
-%%\end{eqnarray}
-%%Next, unlike collocation, the differential equation was not satisfied in interpolation, so it is approximated as a linear combination of nodal values at stencil points \cite{Fasshauer2007}: 
-%%\begin{equation}
-%%\diffop{u}_\phi(x) \approx \sum_{j(k)=1}^{N_S} c^{(k)}_j \diffop{\phi}_j(x) + \sum_{l(k)=1}^{M} d^{(k)}_l \diffop{P}_l(x) =  \left[ \begin{array}{c c} 
-%%	\phi_\diffop{} & P_\diffop{} \\
-%%	%P_\diffop{}^T & 0
-%%	\end{array} \right] \left( \begin{array}{c}
-%%							{c} \\
-%%							{d}
-%%							 \end{array}\right)
-%%\end{equation}
-%%but the coefficients are known, so we really have: 
-%%\begin{equation}
-%%\diffop{u}_\phi(x) \approx \left[ \begin{array}{c c} 
-%%	\phi_\diffop{} & P_\diffop{} \\
-%%	%P_\diffop{}^T & 0
-%%	\end{array} \right] \left[ \begin{array}{c c} 
-%%	\phi & P \\
-%%	P^T & 0
-%%	\end{array} \right]^{-1} \left( \begin{array}{c}
-%%							{u} \\
-%%							0
-%%							 \end{array}\right) = A_\diffop{} A^{-1} \textbf{u}
-%%	\label{eqn:rbffd_solve}
-%%\end{equation}
-%%Interestingly, the $\diffop{\phi_j}$'s in $A_\diffop{} = \left[ \diffop{\phi}_1(x)\ \ \diffop{\phi}_2(x) \cdots \diffop{\phi}_{N_S}(x)\ \ |\ \ \diffop{P_1}(x)\ \ 
-%%\diffop{P_2}(x)\ \cdots \diffop{P_{M}}(x) \right]$ can be provided analytically. Note that Equation~\ref{eqn:rbffd_solve} takes the form of Equation~\ref{eqn:solve_uxx}.
-
-%%Since $A_\diffop{}$ and $A^{-1}$ change only when RBF centers move in time, for non-moving node problems, 
-%%the vector ${L} = A_\diffop{} A^{-1}$ can be precomputed and stored in vector form reducing the computational complexity at each time 
-%%step to a simple inner product \cite{Divo2007}.  \togordon{verify this statement:} Also, the primary difference between RBF-FD and local collocation is RBF-FD expresses derivatives at a node in terms of a linear combination of nodal values at surrounding stencil points (with known coefficients); collocation expresses the derivatives in terms of basis functions (with unknown coefficients). 
-
-
-%
-%If we let $A$ replace the matrix on the left hand side then our coefficients can be found by: 
-%\begin{eqnarray}
-%\left( \begin{array}{c}
-%							\vec{c} \\
-%							\vec{d}
-%							 \end{array}
-%						 \right) = A^{-1} \left( \begin{array}{c}
-%							\vec{b_\diffop{}} \\
-%							0
-%							 \end{array}
-%						 \right) 
-%	\label{eqn:rbffd_solve}
-%\end{eqnarray}
-%Notice that our presentation treats the RBF-FD stencils as if they are global. In practice, stencils are restricted by either a maximum support radius or maximum number of neighbors. 
-
-%The key difference between RBF-FD and local collocation is: once the coefficients $c_j$ are found, they are used to approximate the differential equation 
-
-%In Equation~\ref{eqn:rbffd_formula}, the unknown coefficients $\vec{c}$ and $\vec{d}$ will satisfy that a linear combination of stencil points 
-% 
-
-%
-
-%For a complete derivation see \cite{Wright2004, Wright2003, Wright2006, Chandhini2007}. 
-
-%this is transformed using the \hl{Lagrange form} (for details see \cite{Wright2006, Chandhini2007}): 
-%\begin{eqnarray}
-%u_\phi(x) = \sum_{j=1}^{N} \Psi_j(x) u(x_j)
-%\end{eqnarray}
-%where the coefficients, $\Psi_j(x)$ are of similar form as Equation~\ref{eqn:rbffd_start}, but they satisfy: 
-%\begin{eqnarray}
-%\Psi_j(x_i) = \begin{cases} 1 & \textrm{if } i = j, \\
-%					  0 & \textrm{if } i \neq j
-%					  \end{cases} \hskip1.5em i=1,...,N
-%\end{eqnarray}
-
-%Then applying the operator $\diffop{}$ to the Lagrange representation of the RBF interpolant we get: 
-%\begin{eqnarray}
-%	\diffop{u} \approx \diffop{u_\phi(x)} = \sum_{j=1}^{N} \diffop{ \Psi_j(x)} u(x_j)
-%\end{eqnarray}
-%Here the coefficients, $c_j$ are: 
-%\begin{equation*}
-%c_j = \diffop{\Psi_j(x)}
-%\end{equation*}
-%and can be obtained by solving this linear system: 
-%\begin{eqnarray}
-% \left[ \begin{array}{c c} 
-%	\phi & P \\
-%	P^T & 0
-%	\end{array} \right] \left( \begin{array}{c}
-%							\vec{c} \\
-%							\vec{d}
-%							 \end{array}
-%						 \right) = \left( \begin{array}{c}
-%							\vec{b_\diffop{}}
-%							 \end{array}
-%						 \right) 
-%	\label{eqn:rbffd_formula}
-%\end{eqnarray}
-%where the vector $\vec{b_{\diffop{}}} = \left( \diffop{\phi}_1(x)\ \ \diffop{\phi}_2(x) \cdots \diffop{\phi}_N(x)\ |\ P_1(x)\ \ P_2(x) ... P_M(x) \right)^T$.
-
-%On the left hand side of Equation~\ref{eqn:rbffd_formula} we have a standard 
-
-%The key feature of Equation~\ref{eqn:rbffd_formula} is that both scattered data interpolation and the finite difference weights are determined by the differential operator is not applied 
-
-
-
-\section{Time Stepping}
+\subsection{Time Stepping}
 
 Until now we have assumed that the differential operator $\diffop{}$ had no time dependency. However, many important problems are a function of time: 
 \begin{eqnarray}
@@ -947,7 +813,7 @@ The \emph{RBF-QR} method, an alternative for numerically stable computation in t
 Piret \cite{Fornberg2007} in context of a sphere, and later extended to planar 2D problems in \cite{Fornberg2009b}. The 
 RBF-QR 
 method is simple 
-to implement (less than 100 lines of Matlab code), and it allows solution of large problems that are typically ill-conditioned. Fornberg, Larsson and Flyer \cite{Fornberg2009b} successfully applied RBF-QR on large problems with 6000 nodes for globally supported basis functions. 
+to implement (less than 100 lines of Matlab code), and it allows solution of large problems that are typically ill-conditioned. Fornberg, Larsson and Flyer \cite{Fornberg2009b} successfully applied RBF-QR on large problems with 6000 nodes for globally supported basis functions. \authnote{add mention of bengt's latest: } \cite{Fornberg2011a, Fornberg2011b}
 
 With these two algorithms, global RBF methods have overcome most ill-conditioning issues for small to mid-sized problems. Unfortunately, both Contour-Pad\'{e} and RBF-QR fail for large enough problems due to ill-conditioning. As the number of RBFs increases beyond a few thousand nodes it is impossible to avoid  ill-conditioning of the extremely large interpolation matrix.
 
